# finance-agent-whatsapp-bot

./: .env.example  .gitignore  Dockerfile  README.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml  requirements.txt  root_agent.yaml
app/: agent.py  agent_config.json.example  config.py  instructions.md  main.py  tools.py  whatsapp.py
tasks/: celery.py  scheduled_tasks.py
